--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.12.0+4
   share: ^0.6.3+6
+  device_id: ^0.2.0
+  fluttertoast: ^4.0.1
+  device_info: ^0.4.2+1
+  path_provider: ^1.6.5
+  permission_handler: ^5.0.0+hotfix.3
 
 
   # The following adds the Cupertino Icons font to your application.
