--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,9 @@ dependencies:
   device_info: ^0.4.2+1
   audioplayers: ^0.15.1
   path_provider: ^1.6.5
-  connectivity: ^0.4.8+2
+  dropdownfield: ^1.0.3
+  connectivity: ^0.4.8+2  
+  flutter_facebook_login: ^1.2.0
   permission_handler: ^5.0.0+hotfix.3
 
   # The following adds the Cupertino Icons font to your application.
@@ -56,7 +58,6 @@ flutter:
     - assets/images/
     - assets/images/home_screen/
     - assets/images/splash_screen/
-    - assets/images/topics_screen/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
