--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   share: ^0.6.3+6
   device_id: ^0.2.0
   fluttertoast: ^4.0.1
+  url_launcher: ^5.4.5
   device_info: ^0.4.2+1
   audioplayers: ^0.15.1
   path_provider: ^1.6.5
